2007-02-09 Braden McDaniel  <braden@endoframe.com>

	* src/openvrml-player/player.cpp
	(main(int, char *[])): Use ScopeGuard to manage libcurl clean up.

2007-02-09 Braden McDaniel  <braden@endoframe.com>

	* src/openvrml-player/player.cpp: Added comments; applied
	G_GNUC_INTERNAL to 'extern "C"' functions that libglade doesn't
	need to be visible.

2007-02-09 Braden McDaniel  <braden@endoframe.com>

	Use Glade XML to manage the OpenvrmlPlayerFileChooserDialog.

	* src/openvrml-player/openvrml-player.glade
	(imagemenuitemopen): openvrml_player_file_open_activated now takes
	the dialog as its argument.
	(filechooserdialog): Added OpenvrmlPlayerFileChooserDialog.
	* src/openvrml-player/player.cpp
	(main(int, char *[])): Register OpenvrmlPlayerFileChooserDialog
	with libglade; set the file chooser dialog's parent window.
	(openvrml_player_on_file_open_activated(OpenvrmlPlayerFileChooserDialog*)):
	Now takes the dialog as its argument; just run the dialog (rather
	than creating it).
	(openvrml_player_build_file_chooser_dialog(GladeXML *, GType,
	GladeWidgetInfo *)): Added function; function to create an
	OpenvrmlPlayerFileChooserDialog for libglade.

2007-02-09 Braden McDaniel  <braden@endoframe.com>

	Moved file chooser dialog into its own widget implementation.

	* src/openvrml-player/Makefile.am
	(openvrml_player_SOURCES): Added filechooserdialog.cpp.
	(noinst_HEADERS): Added filechooserdialog.h.
	* src/openvrml-player/filechooserdialog.cpp: File chooser dialog
	implementation.
	* src/openvrml-player/filechooserdialog.h: File chooser dialog
	interface.
	* src/openvrml-player/player.cpp
	(openvrml_player_on_file_open_activated(GtkWindow *)): Use
	OpenvrmlPlayerFileChooserDialog instead of GtkFileChooserDialog.

2007-02-08 Braden McDaniel  <braden@endoframe.com>

	Don't bother with Glade XML for creating the GtkFileChooserDialog;
	doing this entirely in C++ is less code and easier to get right.

	* src/openvrml-player/openvrml-player.glade